--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,3 +11,8 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5432:5432"
+    volumes:
+      - type: bind
+        source: ./postgres-init/
+        target: /docker-entrypoint-initdb.d
+        read_only: true
